--- a/src/main/java/com/trail/chatapplication/ChatApplication.form
+++ b/src/main/java/com/trail/chatapplication/ChatApplication.form
@@ -140,7 +140,7 @@
             <Component class="form.Home" name="home1">
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout" value="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout$BorderConstraintsDescription">
-                  <BorderConstraints direction="Center"/>
+                  <BorderConstraints direction="First"/>
                 </Constraint>
               </Constraints>
             </Component>
